--- a/ergasia 1/ergasia11.html
+++ b/ergasia 1/ergasia11.html
@@ -18,6 +18,22 @@
 </h1>
 
 </div>
+<img class="img5" src="foto1.jpg"  width="1000">
+<p>Η εντολή $cd erg1 επιλέγει τον φάκελο τον οποίο έχουμε στον δίσκο μας.</p>
+<b></b>
+<b></b>
+<p>Η εντολή $ git innit εγκαθιστά το repository που έχουμε δημιουργήσει στο site του github στο αρχείο μας.</p>
+<b></b>
+<b></b>
+<p>Το $ git add . ενημερώνει τα αρχεία για να γίνει commit.</p>
+<b></b>
+<b></b>
+<p>Το $ git commit -m "erg1" κάνει commit τα αρχεία που έχουν ενημερωθεί.</p>
+<b></b>
+<b></b>
+<p>Το $ git push -u erg1 ανεβάζει τα αρχεία στο repository του github</p>
+
+
 
 
 <body>
